--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -25,7 +25,7 @@
         <header>
             <h1><img src="/img/logo-32.png" alt="Rest Demo logo" width="32" height="32"> Online Appointment</h1>
         </header>
-        <section id="header_list">
+        <section id="headerList">
             <ol>
                 <li class="headerFName">First Name</li>
                 <li class="headerLName">Last Name</li>
@@ -49,6 +49,12 @@
                 </ul>
             </template>
         </article>
+        <div id="searchContainer">
+            <form id="searchForm">
+                <input type="search" id="search" name="search" placeholder="Search here">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
         <aside id="appointment">
             <form id="form">
                 <label>
