--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,9 +13,10 @@
         <link rel="icon" href="/img/logo-32.png"   type='image/png'    sizes="32x32">
         <link rel="icon" href="/img/logo-64.png"   type='image/png'    sizes="64x64">
         <link rel="icon" href="/img/logo-128.png"  type='image/png'    sizes="128x128">
-        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="css/system.css" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" type="text/css"/>
 
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
         <script src="js/m2d2.min.js" type="text/javascript"></script>
@@ -49,11 +50,8 @@
                 </ul>
             </template>
         </article>
-        <div id="searchContainer">
-            <form id="searchForm">
-                <input type="search" id="search" name="search" placeholder="Search here">
-                <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
+        <div id="searchParent">
+            <input type="text" class="search" id="search" name="search" placeholder="Search here">
         </div>
         <aside id="appointment">
             <form id="form">
@@ -80,7 +78,7 @@
                     <input type="datetime-local" id="apptDate" name="apptDate" placeholder="yyyy-mm-dd 00:00">
                 </label>
                 <input type="hidden" name="pid" class="pid" value="">
-                <button type="submit" class="fa fa-lock">Submit</button>
+                <button type="submit" class="submitEdit">Submit</button>
             </form>
         </aside>
         <footer>
