--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,14 +15,13 @@
         <link rel="icon" href="/img/logo-128.png"  type='image/png'    sizes="128x128">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/system.css" type="text/css" />
         <link rel="stylesheet" href="css/dark.css" type="text/css">
+        <link rel="stylesheet" href="css/system.css" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" type="text/css"/>
 
         <!-- JavaScript Bundle with Popper -->
-        <!--script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script-->
         <script src="js/sweetalert2.min.js" type="text/javascript"></script>
         <!-- Include a polyfill for ES6 Promises (optional) for IE11 -->
         <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
@@ -34,6 +33,7 @@
     <body>
         <header id="header">
             <h1><a href="#"><img src="/img/logo-32.png" alt="Rest Demo logo" width="32" height="32"></a> Online Appointment</h1>
+            <div class="fa fa-cog fa-2x" aria-hidden="true"></div>
         </header>
         <section id="headerList">
             <ol>
@@ -61,9 +61,6 @@
                         <option value="visa">Visa</option>
                         <option value="rob">ROB</option>
                     </select>
-                </label>
-                <label>
-                    <input type="button" id="apptDate" data-toggle="modal" data-target="#exampleModalCenter" value="Set Date">
                 </label>
                 <div class="calendar col-sm-4 col-md-7 col-lg-4 mt-5" id="calendarcontainer">
                     <div class="card" id="card">
