--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -37,30 +37,17 @@
         </header>
         <section id="logincontainer">
             <form id="loginform">
+                <div class="segment"><h1>LOG-IN</h1></div>
+                <label><input id="loginemail" type="text" placeholder="Email Address"/></label>
+                <label><input id="loginpassword" type="password" placeholder="Password"/></label>
+                <button id="loginbutton" class="red" type="button"><i class="fa fa-lock"></i> Log in</button>
                 <div class="segment">
-                    <h1>Sign up</h1>
+                    <h2>LOG-IN WITH</h2>
+                    <button id="fbbutton" class="unit" type="button"><i class="fa fa-facebook-square" aria-hidden="true"></i></button>
+                    <button id="googlebutton" class="unit" type="button"><i class="fa fa-google"></i></button>
                 </div>
-
-                <label>
-                    <input type="text" placeholder="Email Address"/>
-                </label>
-                <label>
-                    <input type="password" placeholder="Password"/>
-                </label>
-                <button class="red" type="button"><i class="fa fa-lock"></i> Log in</button>
-
-                <div class="segment">
-                    <button class="unit" type="button"><i class="fa fa-arrow-left"></i></button>
-                    <button class="unit" type="button"><i class="fa fa-bookmark"></i></button>
-                    <button class="unit" type="button"><i class="fa fa-cog"></i></button>
-                </div>
-
-                <div class="input-group">
-                    <label>
-                        <input type="text" placeholder="Email Address"/>
-                    </label>
-                    <button class="unit" type="button"><i class="fa fa-search"></i></button>
-                </div>
+                <button id="registerbutton" class="red" type="button"><i class="fa fa-address-card" aria-hidden="true"></i> Register</button>
+                <a href="#" id="forgotpass">Forgot Password?</a>
             </form>
         </section>
         <section id="appointmentsview">
@@ -91,30 +78,31 @@
                             <option value="rob">ROB</option>
                         </select>
                     </label>
-                    <div class="calendar col-sm-4 col-md-7 col-lg-4 mt-5" id="calendarcontainer">
+                    <div id="calendarcontainer" class="calendar col-sm-4 col-md-7 col-lg-4 mt-5">
                         <div class="card" id="card">
                             <h3 class="card-header" id="monthandyear">MONTH</h3>
                             <table class="table table-bordered table-responsive-sm" id="calendar">
                                 <thead><tr id="tableheader"></tr></thead>
                                 <tbody id="calendarbody"></tbody>
                             </table>
-                            <div class="buttonsNav">
+                            <div id="buttonsnav">
                                 <button type="button" class="previous" id="previous">Previous</button>
                                 <button type="button" class="next" id="next">Next</button>
                             </div>
                             <br/>
-                            <div class="listContainer" id="listContainer">
-                                <label class="lead" for="monthList">Jump To:</label>
-                                <select class="monthList" name="month" id="monthList"></select>
-                                <label for="yearList"></label>
-                                <select class="yearList" name="year" id="yearList"></select>
+                            <div id="listcontainer">
+                                <h4 id="jumpto">Jump To:</h4>
+                                <select id="monthList" class="monthList" name="month"></select>
+                                <select id="yearList" class="yearList" name="year"></select>
                             </div>
                         </div>
                     </div>
                     <input type="hidden" name="pid" class="pid" value="">
-                    <button type="submit" id="save" class="save" value="save"><i class="bi bi-save-fill"></i>Submit</button>
-                    <button type="button" id="deleteButton" class="deleteButton" value="delete"><i class="bi bi-trash-fill"></i>Delete</button>
-                    <button type="button" id="clearButton" class="clearButton" value="clear"><i class="bi bi-eraser"></i>Clear</button>
+                    <div id="bottombuttonscontainer">
+                        <button type="submit" id="save" class="save" value="save"><i class="fa fa-floppy-o" aria-hidden="true"></i> Submit</button>
+                        <button type="button" id="deletebutton" value="delete"><i class="fa fa-times" aria-hidden="true"></i> Delete</button>
+                        <button type="button" id="clearbutton" value="clear"><i class="fa fa-eraser" aria-hidden="true"></i> Clear</button>
+                    </div>
                 </form>
             </aside>
         </section>
