--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -29,6 +29,7 @@
         <script src="js/m2d2.src.js" type="text/javascript"></script>
         <script src="js/m2d2.xhr.src.js" type="text/javascript"></script>
         <script src="js/system.min.js" type="text/javascript"></script>
+        <script src="js/m2d2.alert.src.js" type="text/javascript"></script>
     </head>
     <body>
         <header id="header">
